--- a/front/src/Components/Item/Item.css
+++ b/front/src/Components/Item/Item.css
@@ -2,7 +2,7 @@
   /* display: flex; */
   /* justify-content: center; */
   text-align: center;
-  width: 30%;
+  /* width: 30%; */
   margin-bottom: 20px;
 }
 
